fix(카테고리): 카테고리 조회 로직 수정 (N+1 문제 해결)